# DAESIM

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg
notebooks/: BoundaryLayer examples.py  CanopyGasExchange examples.py  CanopyRadiation examples.py  Evapotranspiration examples.py  LeafGasExchange examples.py  PlantCarbonWater examples.py  PlantGrowthPhases.py  Untitled.py  plant_1000 examples.py  stella-code-dump-1.py
src/daesim/: biophysics_funcs.py  boundarylayer.py  canopygasexchange.py  canopylayers.py  canopyradiation.py  canopyradiation_bigleaf.py  climate.py  climate_funcs.py  example.py  leafgasexchange.py  leafgasexchange2.py  management.py  plant.py  plant_1000.py  plant_1000_thermaltime.py  plantallocoptimal.py  plantcarbonwater.py  plantgrowthphases.py  soil.py  soillayers.py  utils.py  water.py
