[metadata]
name = daesim
version = 0.0.1
keywords = daesim, model, agroecosystem, python
author = Alexander Norton
author_email = alexander.norton@anu.edu.au
description = the dynamic agro-ecosystem simulator
license = todo
 
[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy

[options.packages.find]
where = src