[metadata]
name = daesim
version = 0.0.1
keywords = daesim, model, agroecosystem, python
author = Alexander Norton
author_email = alexander.norton@anu.edu.au
description = the dynamic agro-ecosystem simulator
license = todo

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy

[options.packages.find]
where = src